<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="15"
    tools:context="com.haas.mobile.viewsControllers.RegistrationActivity">


    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:visibility="invisible"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_linear_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/prompt_first_name"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:background="@drawable/rounded_text_field"
            android:id="@+id/registrationFirstNameEditText"
            />

        <EditText
            android:paddingLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_field"
            android:layout_width="match_parent"
            android:hint="@string/prompt_last_name"
            android:layout_height="50dp"
            android:id="@+id/registrationLastNameEditText"
            />
        <EditText
            android:paddingLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_field"
            android:layout_width="match_parent"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:id="@+id/registrationPasswordEditText"
            />
        <EditText
            android:paddingLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_field"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:hint="@string/prompt_confirm_password"
            android:layout_height="50dp"
            android:id="@+id/registrationConfirmPasswordEditText"
            />
        <EditText
            android:paddingLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_field"
            android:layout_width="match_parent"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:layout_height="50dp"
            android:id="@+id/registrationEmailEditText"
            />
        <EditText
            android:paddingLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_field"
            android:layout_width="match_parent"
            android:hint="@string/prompt_mobile"
            android:inputType="phone"
            android:layout_height="50dp"
            android:id="@+id/registrationMobileEditText"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textColor="#FFF"
            android:textSize="25dp"
            android:id="@+id/registerButton"
            android:background="@drawable/button"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>
