<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mobile.viewsControllers.LoginActivity"
    android:weightSum="15">
    <!--android:background="@mipmap/im_background">-->

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:visibility="invisible"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_linear_layout">


        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="50dp"

                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:background="@drawable/rounded_text_field"
                        android:layout_height="50dp"
                        android:paddingLeft="20dp"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"

                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="50dp"
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:background="@drawable/rounded_text_field"
                        android:layout_height="50dp"
                        android:paddingLeft="20dp"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="saraaa"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:textColor="#FFF"
                    android:textSize="25dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button"
                    android:textAllCaps="false"
                    android:text="@string/login_button"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
